welcome.lessons.welcome.array.island.Island.scala.error
island:18: error: missing arguments for method premier in class island;
follow this method with `_' if you want to treat it as a partially applied function
			var de:Int = deuxieme(num, premier, niv);
                                                   ^